// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabTitle renders as expected 1`] = `
.c0 {
  background-color: transparent;
  border-bottom: 2px solid #E5EAEC;
  color: rgba(0,0,0,0.55);
  display: inline-block;
  font-weight: bold;
  height: 100%;
  margin-left: 2px;
  padding: 11px 15px 10px;
}

.c0:first-child {
  margin-left: 0;
}

.c0:focus,
.c0:hover {
  background: transparent;
  border-bottom-color: #006300;
  color: rgba(0,0,0,0.9);
  outline: none;
}

.c0:focus {
  outline: none;
}

<li
  className="c0"
  title="Tab Title 1"
/>
`;

exports[`TabTitle when in classic theme renders as expected 1`] = `
.c0 {
  background-color: transparent;
  border-bottom: 2px solid #E5EAEC;
  color: #b3c2c8;
  display: inline-block;
  font-weight: bold;
  height: 100%;
  margin-left: 2px;
  padding: 11px 15px 10px;
  background-color: #f5f6f7;
  border-bottom: 2px solid #ccd6db;
  color: #003349;
}

.c0:first-child {
  margin-left: 0;
}

.c0:focus,
.c0:hover {
  background: transparent;
  border-bottom-color: #006045;
  color: rgba(0,0,0,0.9);
  outline: none;
}

.c0:focus {
  outline: none;
}

.c0:focus,
.c0:hover {
  background: #004b87;
  border-bottom-color: #004b87;
  color: #fff;
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 6px rgba(37,91,199,0.6);
}

<li
  className="c0"
  title="Tab Title 1"
/>
`;

exports[`TabTitle when in classic theme when position prop is set to left applies proper styling 1`] = `
.c0 {
  background-color: transparent;
  border-bottom: 2px solid #E5EAEC;
  color: #b3c2c8;
  display: inline-block;
  font-weight: bold;
  height: 100%;
  margin-left: 2px;
  padding: 11px 15px 10px;
  background-color: transparent;
  border-bottom: 0px;
  border-right: 2px solid #E5EAEC;
  display: block;
  height: auto;
  margin-left: 0px;
  margin-top: 2px;
  background-color: #f5f6f7;
  border-bottom: 2px solid #ccd6db;
  color: #003349;
  background-color: #f5f6f7;
  border-bottom: 0px;
  border-right: 2px solid #ccd6db;
}

.c0:first-child {
  margin-left: 0;
}

.c0:focus,
.c0:hover {
  background: transparent;
  border-bottom-color: #006045;
  color: rgba(0,0,0,0.9);
  outline: none;
}

.c0:focus {
  outline: none;
}

.c0:first-child {
  margin-top: 0;
}

.c0:hover {
  background: transparent;
  border-right-color: #006045;
}

.c0:focus,
.c0:hover {
  background: #004b87;
  border-bottom-color: #004b87;
  color: #fff;
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 6px rgba(37,91,199,0.6);
}

.c0:hover {
  border-right-color: #004b87;
  background: #004b87;
}

<li
  className="c0"
  title="Tab Title 1"
/>
`;

exports[`TabTitle when in classic theme when tab is selected and the position prop is set to left applies proper styling 1`] = `
.c0 {
  background-color: transparent;
  border-bottom: 2px solid #E5EAEC;
  color: #b3c2c8;
  display: inline-block;
  font-weight: bold;
  height: 100%;
  margin-left: 2px;
  padding: 11px 15px 10px;
  color: rgba(0,0,0,0.9);
  background-color: transparent;
  border-bottom-color: #00805D;
  background-color: transparent;
  border-bottom: 0px;
  border-right: 2px solid #E5EAEC;
  display: block;
  height: auto;
  margin-left: 0px;
  margin-top: 2px;
  border-right-color: #00805D;
  background-color: transparent;
  background-color: #f5f6f7;
  border-bottom: 2px solid #ccd6db;
  color: #003349;
  background-color: #fff;
  border-bottom-color: #1963f6;
  background-color: #f5f6f7;
  border-bottom: 0px;
  border-right: 2px solid #ccd6db;
  border-right-color: #1963f6;
  background-color: #fff;
}

.c0:first-child {
  margin-left: 0;
}

.c0:focus,
.c0:hover {
  background: transparent;
  border-bottom-color: #006045;
  color: rgba(0,0,0,0.9);
  outline: none;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  background: transparent;
  border-bottom-color: #00805D;
  color: rgba(0,0,0,0.9);
}

.c0:first-child {
  margin-top: 0;
}

.c0:hover {
  background: transparent;
  border-right-color: #006045;
}

.c0:hover {
  border-right-color: #00805D;
  background-color: transparent;
}

.c0:focus,
.c0:hover {
  background: #004b87;
  border-bottom-color: #004b87;
  color: #fff;
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 6px rgba(37,91,199,0.6);
}

.c0:hover {
  background: #fff;
  border-bottom-color: #1963f6;
  color: #003349;
}

.c0:hover {
  border-right-color: #004b87;
  background: #004b87;
}

.c0:hover {
  border-right-color: #1963f6;
  background-color: #fff;
}

<li
  className="c0"
  title="Tab Title 1"
/>
`;

exports[`TabTitle when in classic theme when tab is selected applies proper styling 1`] = `
.c0 {
  background-color: transparent;
  border-bottom: 2px solid #E5EAEC;
  color: #b3c2c8;
  display: inline-block;
  font-weight: bold;
  height: 100%;
  margin-left: 2px;
  padding: 11px 15px 10px;
  color: rgba(0,0,0,0.9);
  background-color: transparent;
  border-bottom-color: #00805D;
  background-color: #f5f6f7;
  border-bottom: 2px solid #ccd6db;
  color: #003349;
  background-color: #fff;
  border-bottom-color: #1963f6;
}

.c0:first-child {
  margin-left: 0;
}

.c0:focus,
.c0:hover {
  background: transparent;
  border-bottom-color: #006045;
  color: rgba(0,0,0,0.9);
  outline: none;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  background: transparent;
  border-bottom-color: #00805D;
  color: rgba(0,0,0,0.9);
}

.c0:focus,
.c0:hover {
  background: #004b87;
  border-bottom-color: #004b87;
  color: #fff;
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 6px rgba(37,91,199,0.6);
}

.c0:hover {
  background: #fff;
  border-bottom-color: #1963f6;
  color: #003349;
}

<li
  className="c0"
  title="Tab Title 1"
/>
`;

exports[`TabTitle when tab is not selected when position prop is set to left applies proper styles 1`] = `
.c0 {
  background-color: transparent;
  border-bottom: 2px solid #E5EAEC;
  color: rgba(0,0,0,0.55);
  display: inline-block;
  font-weight: bold;
  height: 100%;
  margin-left: 2px;
  padding: 11px 15px 10px;
  background-color: transparent;
  border-bottom: 0px;
  border-right: 2px solid #E5EAEC;
  display: block;
  height: auto;
  margin-left: 0px;
  margin-top: 2px;
}

.c0:first-child {
  margin-left: 0;
}

.c0:focus,
.c0:hover {
  background: transparent;
  border-bottom-color: #006300;
  color: rgba(0,0,0,0.9);
  outline: none;
}

.c0:focus {
  outline: none;
}

.c0:first-child {
  margin-top: 0;
}

.c0:hover {
  background: transparent;
  border-right-color: #006300;
}

<li
  className="c0"
  title="Tab Title 1"
/>
`;

exports[`TabTitle when tab is selected applies proper styling 1`] = `
.c0 {
  background-color: transparent;
  border-bottom: 2px solid #E5EAEC;
  color: rgba(0,0,0,0.55);
  display: inline-block;
  font-weight: bold;
  height: 100%;
  margin-left: 2px;
  padding: 11px 15px 10px;
  color: rgba(0,0,0,0.9);
  background-color: transparent;
  border-bottom-color: #26A826;
}

.c0:first-child {
  margin-left: 0;
}

.c0:focus,
.c0:hover {
  background: transparent;
  border-bottom-color: #006300;
  color: rgba(0,0,0,0.9);
  outline: none;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  background: transparent;
  border-bottom-color: #26A826;
  color: rgba(0,0,0,0.9);
}

<li
  className="c0"
  title="Tab Title 1"
/>
`;

exports[`TabTitle when tab is selected when position prop is set to left applies proper styling  1`] = `[Function]`;
